<resources>
    <string name="app_name">Re:member</string>
    <string name="btn_add">+</string>
    <string name="app_title">My Subscriptions</string>
    <string name="subscription_name">Subscription Name</string>
    <string name="subscription_monthly_cost">Monthly Cost</string>
    <string name="subscription_renewal_start">Renewal Date</string>
    <string name="subscription_frequency">Billing Frequency in Days</string>
    <string name="btn_add_subscription">Add Subscription</string>
    <string name="add_subscription_title">Add New Subscription</string>
    <string name="btn_rm_subscription">Remove Subscription</string>
    <string name="renewal_date_text">Renewal Date: </string>
    <string name="monthly_cost_text">Monthly Cost:</string>
    <string name="current_yearly_cost_text">Current Yearly Cost:</string>
    <string name="total_spent_text">Total Spent:</string>
</resources>
