<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sub_current_yearly_cost"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="@font/baloo"
        android:hint="sub current yearly cost input"
        android:textColor="#646464"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/renewal_date_info4"
        app:layout_constraintStart_toEndOf="@+id/current_yearly_cost_text"
        app:layout_constraintTop_toTopOf="@+id/current_yearly_cost_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="410dp"
        android:layout_height="90dp"
        android:background="@color/colorGray"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/renewal_date_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_rm_subscriptions"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/remove_rectangle"
        android:fontFamily="@font/baloo"
        android:text="@string/btn_rm_subscription"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.615"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/subscription_title"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/subscription_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/triangle"
        android:rotation="270"
        android:rotationX="0"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/renewal_date_info"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:fontFamily="@font/baloo"
        android:text="@string/renewal_date_text"
        android:textColor="#646464"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/monthly_cost_info"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/renewal_date_user_info"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:fontFamily="@font/baloo"
        android:hint="renewal date user input"
        android:textColor="#646464"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/renewal_date_info"
        app:layout_constraintStart_toEndOf="@+id/renewal_date_info"
        app:layout_constraintTop_toTopOf="@+id/renewal_date_info"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sub_montly_cost"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/baloo"
        android:hint="sub monthly cost"
        android:textColor="#646464"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/current_yearly_cost_text"
        app:layout_constraintStart_toEndOf="@+id/monthly_cost_info"
        app:layout_constraintTop_toBottomOf="@+id/renewal_date_info" />

    <TextView
        android:id="@+id/user_total_spent"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:fontFamily="@font/baloo"
        android:hint="total spent input"
        android:textColor="#646464"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/renewal_date_info4"
        app:layout_constraintStart_toEndOf="@+id/renewal_date_info4"
        app:layout_constraintTop_toTopOf="@+id/renewal_date_info4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/monthly_cost_info"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:fontFamily="@font/baloo"
        android:text="@string/monthly_cost_text"
        android:textColor="#646464"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/current_yearly_cost_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/current_yearly_cost_text"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:fontFamily="@font/baloo"
        android:text="@string/current_yearly_cost_text"
        android:textColor="#646464"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/renewal_date_info4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/renewal_date_info4"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="264dp"
        android:fontFamily="@font/baloo"
        android:text="@string/total_spent_text"
        android:textColor="#646464"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_rm_subscriptions"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>